[BE] Add login endpoint
